$Id: History,v 1.5 2000-06-24 07:47:36 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N05 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

June 24, 2000  John Allison  (exampleN05-V01-01-01)
- Updated exampleN05.out for stand-V01-01-05 and utils-V01-01-03.

June 17, 2000  John Allison  (exampleN05-V01-01-00)
- Updated exampleN05.out for geant4-01-01-ref-06.

23th April 1999 H.Kurashige
- Remove ConstructHad and ConstructLeptHad in ExN05PhysicsList

16th April 1999 H.Kurashige
- modify ExN05RunAction  ExN05SteppingAction ExN05TrackingAction
- modify ExN05PhysicsList::SetCuts

11 December 1998 M. Verderi
- fix made in ExN05CalorimeterSD to allow several instanciations of this class.
  The problem was a static variable (HCID) used in EndOfEventAction which made
  confusion to get the hits collection. HCID is now put as private (non static!) 
  member of the class.
- the example.in/.out are updated accordingly


9 December 1998 M. Verderi
- Added ExN05PionShowerModel: a model producing hits
  for pi+/pi-
- Modify ExN05EMShowerModel to produce a "less unrealistic"
  shower shape: now the longitudinal profile is according to
  the Gamma distribution. Transverse profile is two cylinder:
  the 1 moliere radius receive 90% of the energy, the 3.5 one
  receives the rest.
- Added RandomGamma: shoot at random according to the Gamma