@@ -1,4 +1,4 @@
-$Id: History,v 1.5 2000-06-24 07:47:36 stesting Exp $
+$Id: History,v 1.6 2000-06-28 13:18:58 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+June 26, 2000  John Allison  (exampleN05-V02-00-00)
+- Reduced no. of events per run from 500 to 250 in exampleN05.large_N.in.
 
 June 24, 2000  John Allison  (exampleN05-V01-01-01)
 - Updated exampleN05.out for stand-V01-01-05 and utils-V01-01-03.
